# advance-bevy-wars

./: Cargo.toml  build.rs  justfile
.github/workflows/: ci.yml
assets/: map_test.abwm
assets/commanders/: base.abwc
assets/menu_style/: menu.css  ui.css
assets/text/: credits.md
crates/auto-tiler/: Cargo.toml
crates/auto-tiler/src/: auto_tiler.rs  board.rs  lib.rs  rules.rs
crates/auto-tiler/tests/: auto-tiler.rs
examples/: terrain-shower.rs  tilemap.rs
src/: animations.rs  assets.rs  board.rs  main.rs  matrix.rs
src/board/: board.rs  direction.rs  map.rs  mod.rs  player.rs  samples.rs  terrain.rs  tiles.rs
src/interactive/: mod.rs
src/menus/: main_menu.rs  mod.rs
src/ui/: mod.rs  movement.rs
