[package]
name = "advance-bevy-wars"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
"crates/*"
]

[workspace.dependencies]
auto-tiler = { path = "crates/auto-tiler"}
bevy = { version = "0.17.2", features = ["dynamic_linking", "bevy_dev_tools"] }


[dependencies]
auto-tiler = { workspace = true }
bevy = { workspace = true }
bevy-inspector-egui = { version = "0.34.0", optional = true }
bevy_flair = "0.5.0"
rand = "0.9.2"
# ui_helpers = { git = "https://github.com/Dracks/bevy-helpers.git", rev="4dddc6821a0324b990ef938023750c49110e651e" }
ui_helpers = { path="../bevy_tools/crates/ui_helpers" }
assets_helper = { git = "https://github.com/Dracks/bevy-helpers.git", rev="4dddc6821a0324b990ef938023750c49110e651e" }
thiserror = "2.0.17"
toml = "0.9.8"

[build-dependencies]
assets_generator = { git = "https://github.com/Dracks/bevy-helpers.git", rev="4dddc6821a0324b990ef938023750c49110e651e" }

[features]
default = ["bevy/dynamic_linking"]
bevy-inspector-egui = ["dep:bevy-inspector-egui"]
debug = ["bevy-inspector-egui", "bevy/track_location"]


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# WASM
# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.3.4"
features=["wasm_js"]
